[package]
name = "easyp-server"
version = "0.1.1"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0 OR ISC OR MIT"
description = "EasyPeas - On-demand HTTPS server with ACME certificate management"
homepage = "https://github.com/rustls/rustls"
repository = "https://github.com/rustls/rustls"
categories = ["network-programming", "cryptography"]
default-run = "easyp"

# Make this crate independent of the parent workspace
[workspace]

[[bin]]
name = "easyp"
path = "src/bin/easyp.rs"

[features]
default = ["acme", "extensions"]
acme = []
extensions = []

[dependencies]
# Main rustls library
rustls = { path = "/home/cursor/EasyPeas_HTTPS/rustls/rustls", features = ["aws-lc-rs"] }

# ACME functionality
rustls-acme = { path = "/home/cursor/EasyPeas_HTTPS/rustls/rustls-acme" }

# Command line parsing
clap = { version = "4.3.21", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.34", features = ["io-util", "macros", "net", "rt"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Collections
indexmap = "2.11"

# Error handling
anyhow = "1.0"

# Network
get_if_addrs = "0.5"

# Time
time = { version = "0.3.6", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# System dependencies
libc = "0.2"

# URL encoding
urlencoding = "2.1"

# Regular expressions for extension processing
regex = "1.10"
